--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,6 +25,6 @@ steps:
   inputs:
     azureSubscription: "diocamStopSlot"
     Action: "Stop Azure App Service"
-    WebAppName: 'diocamStopSlot'
+    WebAppName: 'mytest'
     SpecifySlotOrASE: true
     Slot: 'deploy'
