Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,7 +24,7 @@ steps:
   displayName: "Stopping App Service Slot"
   inputs:
     azureSubscription: "diocamStopSlot"
-    Action: "Stop Azure App Service"
+    Action: "Delete Slot"
     WebAppName: 'diocamStopSlot'
     SpecifySlotOrASE: true
     Slot: 'mytest'
