--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -26,4 +26,4 @@ steps:
     azureSubscription: "diocamStopSlot"
     Action: "Delete Slot"
     WebAppName: 'diocamStopSlot'
-    Slot: 'mytest'
+    Slot: 'staging'
