Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,5 +25,6 @@ steps:
   inputs:
     azureSubscription: "diocamStopSlot"
     Action: "Stop Azure App Service"
-    WebAppName: 'mytest'
+    WebAppName: 'diocamStopSlot'
     SpecifySlotOrASE: true
+    Slot: 'mytest'
